Moved menu functions into new runMenus files
Also added starter test files for each class and ensured they were working with CMake, also got rid of a redundant googletest folder, we only needed one googletest folder, so I kept the one we use in the tests folder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,26 @@
 cmake_minimum_required(VERSION 3.20)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
+add_subdirectory(tests/googletest)
+
+ADD_EXECUTABLE(runAllTests
+  tests/testFolder.cpp
+  tests/testFolManager.cpp
+  tests/testNote.cpp
+  tests/testRunMenus.cpp
+  
+  src/note.cpp 
+  src/folder.cpp 
+  src/folderManager.cpp
+  src/runMenus.cpp
+)
 
 ADD_EXECUTABLE(runProgram
     src/main.cpp
     src/note.cpp 
     src/folder.cpp 
     src/folderManager.cpp
+    src/runMenus.cpp
 )
+
+target_link_libraries(runAllTests gtest gtest_main)
